# MdmPpacSim

./: CMakeLists.txt  MdmPpacSim.cc  README.md  batch.py  condor_jobs.sub  mp_run.sh  plotHisto.C  run.mac  runOnCluster.py  testLocal.py  vis.mac
condor/: condor_batch.sh  submit.job
config/: config.json  stage1.json  stage2.json
include/: ActionInitialization.hh  BeamEmittance.hh  DetectorConstruction.hh  DetectorHit.hh  DetectorSD.hh  EventAction.hh  HistoManager.hh  MDMTrace.h  PrimaryGeneratorAction.hh  ReactionPhysics.hh  ReactionProcess.hh  RunAction.hh  SteppingAction.hh
spark/: batch.py
src/: ActionInitialization.cc  BeamEmittance.cc  DetectorConstruction.cc  DetectorHit.cc  DetectorSD.cc  EventAction.cc  HistoManager.cc  MDMTrace.cpp  PrimaryGeneratorAction.cc  RAYTKIN1.F  ReactionPhysics.cc  ReactionProcess.cc  RunAction.cc  SteppingAction.cc
